tests/ui/match-stable.stderr
error: E::Bbb should sort before E::Ccc
  --> tests/ui/match-stable.rs:17:9
   |
8  | #[remain::check]
   | ---------------- in this procedural macro expansion
...
17 |         E::Bbb(_, _) => {}
   |         ^^^^^^
   |
   = note: this error originates in the attribute macro `remain::check` (in Nightly builds, run with -Z macro-backtrace for more info)
